# momentum-cnn-research

./: .gitignore  pyproject.toml
checkpoints/: best_model_20240101.pt
src/: backtest.py  create_predictions.py  data.py  datasets.py  models.py  results.py  train.py  train_all_models.py
