[project]
name = "momentum-cnn-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "polars>=1.35.1",
    "seaborn>=0.13.2",
    "sf-quant>=0.1.3",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]
